# temporal-awareness-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
src/temporal_awareness_mcp/: __init__.py  http_main.py  main.py  models.py  server.py  stdio_main.py  utils.py
src/temporal_awareness_mcp/tools/: contextual.py  core.py
tests/: test_contextual_tools.py  test_core_tools.py  test_server.py
