[tool.poetry]
name = "temporal-awareness-mcp"
version = "0.1.0"
description = "A robust MCP server that gives language models temporal awareness and calculation abilities."
authors = ["pmbstyle <slava@trofimov.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "temporal_awareness_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastmcp = ">=2.3.2"
pydantic = ">=2.8.2"
python-dateutil = ">=2.9.0"
uvicorn = ">=0.35.0"
tzdata = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"